--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -1,19 +1,21 @@
 <div class="container-fluid">
-    <div class="row cpt-6 pb-4">
-        <div class="col-lg-6 cpr-6 pb-4">
-            <h1 class="pr-1">
+    <div class="row cpt-lg-6 cpb-lg-3">
+        <div class="col-lg-6 cpr-lg-6 col-sm-12 pb-4">
+            <h1 class="pr-1 pb-4 mb-lg-4">
                 Reevaluate every other company that claims to be a partner
             </h1>
+            <button type="button" class="btn btn-accent btn-mx-lg mt-lg-4">Learn More</button>
         </div>
-        <div class="col-lg-6"></div>
+        <div class="col-lg-6 col-sm-12"></div>
     </div>
-    <div class="row three-cols-second-row pt-4">
-        <div class="col-lg-4 pr-4 pr-lg-4">
+    <div class="row three-cols-second-row cpt-lg-6">
+        <div class="col-lg-4 col-sm-12 pr-4 pr-lg-4 cpy-sm-6">
             <div class="opt-col">
-                <h1 class="py-lg-4 my-lg-4 pl-2">We get <br> shit done.</h1>
+                <img src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_636/https://www.redhorndigital.com/wp-content/uploads/2020/03/stripe-pattern-2.png" alt="">
+                <h1 class="py-lg-4 my-lg-4 pl-1 ml-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
             </div>
         </div>
-        <div class="col-lg-4 pr-4">
+        <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
             <div class="opt-col">
                 <h1 class="pt-1 pb-1 pl-2">
                     We<br>
@@ -22,7 +24,7 @@
                 </h1>
             </div>
         </div>
-        <div class="col-lg-4 pr-4">
+        <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
             <div class="opt-col">
                 <h1 class="pt-1 pb-1 pl-2">
                     When<br>
@@ -31,6 +33,64 @@
                 </h1>
             </div>
         </div>
-
+    </div>
+    <div class="row pt-4">
+        <div class="col-lg-6 cpl-lg-6">
+            <img class="img-fluid" src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_583/https://www.redhorndigital.com/wp-content/uploads/2020/03/rectangle.png">
+        </div>
+        <div class="col-lg-6 cpr-lg-6 pt-4">
+            <h5 style="color: #7f7f7f ;" class="pb-3">We're not interested in being just a resource</h5>
+            <h2 class="pb-2">We want to get into the trenches</h2>
+            <div class="pb-3">
+                <p class="pb-3">And help you achieve the impossible; when you succeed, we succeed. We drive results and smash goals every day before breakfast. We’d love to smash yours, too.</p>
+                <p>Need help with your B2B marketing? Get at us and we’ll ruin you for all other agencies.</p>
+            </div>
+            <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
+        </div>
+    </div>
+    <div class="row cpt-lg-6 cpx-lg-6 cpb-lg-6">
+        <div class="col-lg-4">
+            <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
+            <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
+            <ul class="pl-0 pt-1">
+                <li>Brand Strategy &amp; Experience</li>
+                <li>Guidelines &amp; Systems</li>
+                <li>Content Strategy</li>
+                <li>Go-To-Market Strategy</li>
+                <li>Identity Design</li>
+            </ul>
+        </div>
+        <div class="col-lg-4">
+            <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
+            <h4 class="mt-4 pt-2 pb-2">Web & Digital</h4>
+            <ul class="pl-0 pt-1">
+                <li>Digital Strategy</li>
+                <li>UX &amp; UI Design</li>
+                <li>Functional Prototyping</li>
+                <li>Web &amp; App Development</li>
+                <li>SEO Strategy &amp; Systems</li>
+            </ul>
+        </div>
+        <div class="col-lg-4">
+            <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
+            <h4 class="mt-4 pt-2 pb-2">Hypergrowth</h4>
+            <ul class="pl-0 pt-1">
+                <li>Growth Strategy</li>
+                <li>Sales Enablement</li>
+                <li>Hubspot Account Creation &amp; Analytics</li>
+                <li>Social Media Marketing</li>
+                <li>PPC Campaigns</li>
+                <li>Launch Strategies</li>
+                <li>Email Marketing</li>
+                <li>SEO Enablement</li>
+                <li>LinkedIn Automation</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row cpt-lg-6">
+        <div class="col-lg-12 text-center">
+            <h5 style="color: #7f7f7f ;" class="pb-1 mb-lg-4">OUR WORK</h5>    
+            <h2 class="">Our Delicious Masterpieces</h2>
+        </div>
     </div>
 </div>
