--- a/redhorn/src/app/pages/homepage/homepage.component.scss
+++ b/redhorn/src/app/pages/homepage/homepage.component.scss
@@ -1,7 +1,14 @@
 @media screen and (min-width: 999px){
     .three-cols-second-row { margin-top: 50px ; padding-bottom: 25% ; }
     .three-cols-second-row .col-lg-4:nth-child(1) .opt-col { border: solid 6px #000 ; padding: 60px 0 110px 0 ; }
+    .three-cols-second-row .col-lg-4:nth-child(1) .opt-col img { max-width: 88%; position: absolute; top: 28%; mix-blend-mode: screen ; }
+    .three-cols-second-row .col-lg-4:nth-child(1) .opt-col h1 { background-color: #fff ; z-index: 1 ; }
     .three-cols-second-row .col-lg-4:nth-child(2) { transform: translateY(48%); }
     .three-cols-second-row .col-lg-4:nth-child(2) .opt-col { background-color: #F3F3F3 ; padding: 60px 0 80px 0 ; }
     .three-cols-second-row .col-lg-4:nth-child(3) .opt-col { background-color: #ff0000 ; color: #fff ; padding: 50px 0 80px 0 ;}
 }
+@media screen and (max-width: 999px){   
+    .three-cols-second-row .col-lg-4:nth-child(1) .opt-col img { max-width: 100% ; mix-blend-mode: screen ; }
+}
+ul li { list-style: none ; }
+ul li:before { content: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/combined-shape.svg'); margin-right: 11px; margin-top: -1px ; }
