--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -48,8 +48,8 @@
             <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
         </div>
     </div>
-    <div class="row cpt-lg-6 cpx-lg-6 cpb-lg-6">
-        <div class="col-lg-4">
+    <div class="row cpt-lg-6 cpx-lg-6 cpb-lg-6 pl-4">
+        <div class="col-lg-4 mt-lg-0 mt-4">
             <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
             <ul class="pl-0 pt-1">
@@ -60,7 +60,7 @@
                 <li>Identity Design</li>
             </ul>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-lg-0 mt-4">
             <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
             <h4 class="mt-4 pt-2 pb-2">Web & Digital</h4>
             <ul class="pl-0 pt-1">
@@ -71,7 +71,7 @@
                 <li>SEO Strategy &amp; Systems</li>
             </ul>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-lg-0 mt-4">
             <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
             <h4 class="mt-4 pt-2 pb-2">Hypergrowth</h4>
             <ul class="pl-0 pt-1">
@@ -87,10 +87,131 @@
             </ul>
         </div>
     </div>
-    <div class="row cpt-lg-6">
+    <div class="row cpt-lg-6 mt-lg-0 mt-5">
         <div class="col-lg-12 text-center">
             <h5 style="color: #7f7f7f ;" class="pb-1 mb-lg-4">OUR WORK</h5>    
             <h2 class="">Our Delicious Masterpieces</h2>
         </div>
     </div>
+    <!-- Start of Huver row -->
+    <div class="row cpt-lg-6 cpx-lg-3 mt-lg-0 mt-4">
+        <div class="col-lg-12">
+            <div class="row cpt-lg-6 pl-lg-0 pb-lg-4 mb-4 py-4">
+                <div class="bg-img" id="huvr" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic.png');">
+                </div>
+                <div class="col-lg-6 cpy-lg-6 cpl-lg-6 pr-5 light">
+                    <p class="custom_row_details">+ branding, website redesign, product design, growth marketing</p>
+                    <h3 class="pt-1">HUVR data —</h3>
+                    <p class="pt-3 pb-5">We do the whole shebang and are killing it by putting millions of dollars into their sales pipeline.</p>
+                    <h4 class="white_arrow_after_heading">
+                        <a class="light" href="/case-study-huvr/">View Case Study</a>
+                    </h4>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Huver row -->
+    <!-- Start of PMC row -->
+    <div class="row cpx-lg-3 mt-5">
+        <div class="col-lg-12">
+            <div class="row pl-lg-0 mb-4 py-4">
+                <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-1.png');">
+                </div>
+                <div class="col-lg-6 cpy-lg-3 cpl-lg-6 pr-5 dark">
+                    <p class="custom_row_details cpt-lg-3" style="color: #888;">+ branding, website redesign</p>
+                    <h3 class="pt-1">PMC —</h3>
+                    <p class="pt-3 pb-5">Helping an almost 30 year old parking management company modernize for the next 30 years.</p>
+                    <h4 class="gray_arrow_after_heading">
+                        <a class="dark" href="/case-study-huvr/">View Case Study</a>
+                    </h4>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
+        </div>
+    </div>
+    <!-- End of PMC row -->
+    <!-- Start of Inzata row -->
+    <div class="row cpx-lg-3 mt-5">
+        <div class="col-lg-12">
+            <div class="row cpt-lg-6 cpb-lg-3 pl-lg-0 mb-4 py-4">
+                <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-2.png');">
+                </div>
+                <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-6 light">
+                    <p class="custom_row_details">+ branding, website redesign + development, paid media, growth marketing</p>
+                    <h3 class="pt-1">Inzata —</h3>
+                    <p class="pt-3 pb-5">We worked with Inzata to help with their branding, build a more robust website and manage their paid media to bring in more than 230 leads per week.</p>
+                    <h4 class="white_arrow_after_heading">
+                        <a class="light" href="/case-study-huvr/">View Case Study</a>
+                    </h4>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Inzata row -->
+    <!-- Start of IXRF row -->
+    <div class="row cpx-lg-3 my-5">
+        <div class="col-lg-12">
+            <div class="row cpt-lg-6 pl-lg-0 mb-4 py-4">
+                <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/ixrf-system.jpg');">
+                </div>
+                <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-3 light">
+                    <p class="custom_row_details pt-5">+ branding, website redesign, growth marketing</p>
+                    <h3 class="pt-1">IXRF —</h3>
+                    <p class="pt-3 pb-5">We worked with IXRF to help with their branding, build a more robust website and manage their paid media to bring in more than 230 leads per week.</p>
+                    <h4 class="white_arrow_after_heading">
+                        <a class="light" href="/case-study-huvr/">View Case Study</a>
+                    </h4>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
+        </div>
+    </div>
+    <!-- End of IXRF row -->
+    <div class="row py-3">
+        <div class="col-lg-12 text-center">
+            <h4 class="red_arrow_after_heading">
+                <a class="accent" href="/works/">See All Work</a>
+            </h4>
+        </div>
+    </div>
+    <div class="row px-4">
+        <div class="col-lg-6 text-left cpr-lg-6">
+            <h2> Our Clients </h2>
+        </div>
+        <div class="col-lg-6">
+        </div>
+    </div>
+    <div class="row px-4 pb-lg-5">
+        <div class="col-lg-6 text-left cpr-lg-6">
+            <p class="pr-lg-2 mt-4 pt-1">
+                We love partnering with people like us, the hustlers, the people who are out there making shit happen every day
+            </p>
+        </div>
+        <div class="col-lg-6 text-center px-4 mt-4">
+            <div class="px-lg-4">
+                <img class="img-fluid" src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_1605/https://www.redhorndigital.com/wp-content/uploads/2020/03/Feature-company-logos.png">
+            </div>
+        </div>
+    </div>
+    <div class="row my-5 pt-lg-5">
+        <div class="col-lg-12">
+            <div class="row cpy-lg-6 light cpx-lg-6">
+                <div class="bg-img" style="background-image: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/bg.svg');">
+                </div>
+                <div class="col-lg-5 cpx-lg-3 cpy-lg-3 py-lg-0 py-4">
+                    <div class="pl-4">
+                        <h3>Ready to move fast and hard toward winning? Contact Us</h3>
+                    </div>
+                </div>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-5 cpx-lg-3 cpy-lg-3 borderedBottomCol py-lg-0 py-4">
+                    <h3 class="pb-2"><a class="light" href="#">+ Book a call</a><br><span class="borderBottom"></span></h3>
+                    <h3 class="pb-2"><a class="light" href="#">+ contact@redhorn.com</a><br><span class="borderBottom"></span></h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row pt-5 pb-3"></div>
 </div>
