--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -100,7 +100,7 @@
                 <div class="bg-img" id="huvr" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic.png');">
                 </div>
                 <div class="col-lg-6 cpy-lg-6 cpl-lg-6 pr-5 light">
-                    <p class="custom_row_details">+ branding, website redesign, product design, growth marketing</p>
+                    <p class="custom_row_details cpt-sm-3">+ branding, website redesign, product design, growth marketing</p>
                     <h3 class="pt-1">HUVR data —</h3>
                     <p class="pt-3 pb-5">We do the whole shebang and are killing it by putting millions of dollars into their sales pipeline.</p>
                     <h4 class="white_arrow_after_heading">
@@ -119,7 +119,7 @@
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-1.png');">
                 </div>
                 <div class="col-lg-6 cpy-lg-3 cpl-lg-6 pr-5 dark">
-                    <p class="custom_row_details cpt-lg-3" style="color: #888;">+ branding, website redesign</p>
+                    <p class="custom_row_details cpt-lg-3 cpt-sm-3" style="color: #888;">+ branding, website redesign</p>
                     <h3 class="pt-1">PMC —</h3>
                     <p class="pt-3 pb-5">Helping an almost 30 year old parking management company modernize for the next 30 years.</p>
                     <h4 class="gray_arrow_after_heading">
@@ -134,11 +134,11 @@
     <!-- Start of Inzata row -->
     <div class="row cpx-lg-3 mt-5">
         <div class="col-lg-12">
-            <div class="row cpt-lg-6 cpb-lg-3 pl-lg-0 mb-4 py-4">
+            <div class="row cpt-lg-6 pb-lg-0 pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-2.png');">
                 </div>
                 <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-6 light">
-                    <p class="custom_row_details">+ branding, website redesign + development, paid media, growth marketing</p>
+                    <p class="custom_row_details cpt-sm-3">+ branding, website redesign + development, paid media, growth marketing</p>
                     <h3 class="pt-1">Inzata —</h3>
                     <p class="pt-3 pb-5">We worked with Inzata to help with their branding, build a more robust website and manage their paid media to bring in more than 230 leads per week.</p>
                     <h4 class="white_arrow_after_heading">
@@ -197,16 +197,16 @@
     </div>
     <div class="row my-5 pt-lg-5">
         <div class="col-lg-12">
-            <div class="row cpy-lg-6 light cpx-lg-6">
+            <div class="row cpy-lg-6 light cpx-lg-6 cpy-sm-3">
                 <div class="bg-img" style="background-image: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/bg.svg');">
                 </div>
-                <div class="col-lg-5 cpx-lg-3 cpy-lg-3 py-lg-0 py-4">
+                <div class="col-lg-5 cpx-lg-3 cpy-lg-3">
                     <div class="pl-4">
                         <h3>Ready to move fast and hard toward winning? Contact Us</h3>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
-                <div class="col-lg-5 cpx-lg-3 cpy-lg-3 borderedBottomCol py-lg-0 py-4">
+                <div class="col-lg-5 cpx-lg-3 cpy-lg-3 borderedBottomCol">
                     <h3 class="pb-2"><a class="light" href="#">+ Book a call</a><br><span class="borderBottom"></span></h3>
                     <h3 class="pb-2"><a class="light" href="#">+ contact@redhorn.com</a><br><span class="borderBottom"></span></h3>
                 </div>
