Few edit in Capabilities

--- a/redhorn/src/app/pages/capabilities/capabilities.component.html
+++ b/redhorn/src/app/pages/capabilities/capabilities.component.html
@@ -1,1 +1,7 @@
-<p>capabilities works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12">
+            Capabilities test 
+        </div>
+    </div>
+</div>
