--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="row pt-4">
+    <div class="row pt-4 cpb-lg-6">
         <div class="col-lg-6 cpl-lg-6">
             <img class="img-fluid" src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_583/https://www.redhorndigital.com/wp-content/uploads/2020/03/rectangle.png">
         </div>
@@ -48,7 +48,7 @@
             <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
         </div>
     </div>
-    <div class="row cpt-lg-6 cpx-lg-6 cpb-lg-6 pl-4">
+    <div class="row cpt-lg-6 cpx-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
             <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
