First edit to sticky header

--- a/redhorn/src/app/layouts/header/header.component.html
+++ b/redhorn/src/app/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid header">
+<div class="container-fluid header" id="header">
     <div class="row pt-4">
         <div class="col-lg-6">
             <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/logo.svg">
