--- a/redhorn/src/app/pages/capabilities/capabilities.component.html
+++ b/redhorn/src/app/pages/capabilities/capabilities.component.html
@@ -1,7 +1,10 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12">
-            Capabilities test 
+<div class="container-fluid" id="capabilites_row">
+    <div class="row light">
+        <div class="col-lg-4 pr-lg-5">
+            <h1 class="pb-4">Capabilties</h1>
+            <p>Red Horn was founded with a very simple concept in mind: we want to get shit done. We believe all companies no matter if you are just starting out or  in growth phase can benefit from a CMO-level expert to help lead digital marketing efforts.</p>
+        </div>
+        <div class="col-lg-6">
         </div>
     </div>
 </div>
