--- a/redhorn/src/styles.scss
+++ b/redhorn/src/styles.scss
@@ -60,6 +60,10 @@ button.btn-accent { background-color: $accent-color ; color: #fff ; }
 
 // List styling 
 ul > li { margin-bottom: 6px ; }
+
+// Body animation 
+body { transition: background 0.3s ease ; }
+
 @media screen and (min-width: 999px){
     // Typograph big screen
 
