finishing Capabilites page
finishing Capabilites page and adding the big red bottom row as a component cause it's repeated

--- a/redhorn/src/app/layouts/footer/footer.component.html
+++ b/redhorn/src/app/layouts/footer/footer.component.html
@@ -10,7 +10,7 @@
                 </ul>
             </div>
             <div class="footerimage">
-                <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/logo-1.svg">
+                <img class="img-fluid" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/logo-1.svg">
             </div>
         </div>
     </div>
