--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -12,7 +12,7 @@
         <div class="col-lg-4 col-sm-12 pr-4 pr-lg-4 cpy-sm-6">
             <div class="opt-col">
                 <img src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_636/https://www.redhorndigital.com/wp-content/uploads/2020/03/stripe-pattern-2.png" alt="">
-                <h1 class="py-lg-4 my-lg-4 pl-1 ml-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
+                <h1 class="py-lg-4 my-lg-4 pl-1 ml-1 mr-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
             </div>
         </div>
         <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
@@ -48,7 +48,7 @@
             <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
         </div>
     </div>
-    <div class="row cpt-lg-6 cpx-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
+    <div class="row three_columns_row cpt-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
             <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
@@ -183,7 +183,7 @@
         <div class="col-lg-6">
         </div>
     </div>
-    <div class="row px-4 pb-lg-5">
+    <div class="row px-4 cpb-lg-6">
         <div class="col-lg-6 text-left cpr-lg-6">
             <p class="pr-lg-2 mt-4 pt-1">
                 We love partnering with people like us, the hustlers, the people who are out there making shit happen every day
@@ -195,23 +195,7 @@
             </div>
         </div>
     </div>
-    <div class="row my-5 pt-lg-5">
-        <div class="col-lg-12">
-            <div class="row cpy-lg-6 light cpx-lg-6 cpy-sm-3">
-                <div class="bg-img" style="background-image: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/bg.svg');">
-                </div>
-                <div class="col-lg-5 cpx-lg-3 cpy-lg-3">
-                    <div class="pl-4">
-                        <h3>Ready to move fast and hard toward winning? Contact Us</h3>
-                    </div>
-                </div>
-                <div class="col-lg-1"></div>
-                <div class="col-lg-5 cpx-lg-3 cpy-lg-3 borderedBottomCol">
-                    <h3 class="pb-2"><a class="light" href="#">+ Book a call</a><br><span class="borderBottom"></span></h3>
-                    <h3 class="pb-2"><a class="light" href="#">+ contact@redhorn.com</a><br><span class="borderBottom"></span></h3>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row pt-5 pb-3"></div>
+    <app-red-bottom-row></app-red-bottom-row>
+    <div class="row pt-lg-4"></div>
+    <div class="row pt-5 pb-5"></div>
 </div>
