Finishing Contact us page + Contact form

--- a/redhorn/src/app/layouts/header/header.component.html
+++ b/redhorn/src/app/layouts/header/header.component.html
@@ -1,7 +1,7 @@
 <div id="header">
     <div class="container-fluid">
         <div class="row pt-4">
-            <div class="col-lg-6">
+            <div class="col-lg-6 pt-lg-2">
                 <img class="dark_logo" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/logo.svg">
                 <img class="light_logo" src="https://redhornstaging.wpengine.com/wp-content/uploads/2020/03/logo-white.svg">
             </div>
