added works cards

--- a/redhorn/src/app/pages/work/work.component.html
+++ b/redhorn/src/app/pages/work/work.component.html
@@ -1,26 +1,12 @@
-<h1 style="color: #ffffff;text-align: left" class="vc_custom_heading">The work we do,</h1>
-<h1 style="color: #000000;text-align: left" class="vc_custom_heading">and the brands we help.</h1>
-<div class="container">
-    <div class="row">
-        <div class="col work-card">
-            <div class="work-card-img">
-                <img data-shadow="none" data-shadow-direction="middle" class="img-with-animation skip-lazy work-left-img work-img animated-in" 
-                data-delay="0" height="520" width="560" data-animation="fade-in" 
-                src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_560/https://www.redhorndigital.com/wp-content/uploads/2020/03/huvr-thumbnail.png" srcset="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_560/https://www.redhorndigital.com/wp-content/uploads/2020/03/huvr-thumbnail.png 560w, https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_300/https://www.redhorndigital.com/wp-content/uploads/2020/03/huvr-thumbnail-300x279.png 300w" sizes="100vw" alt="" 
-                style="opacity: 1; will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
-            </div>
-            <div class="work-card-title">
-                <p>HUVR —</p>
-            </div>
-            <div class="work-card-content">
-                <p>The whole shebang, helping put millions of dollars into their sales pipeline.</p>
-            </div>
-            <div class="work-card-link">
-                <h4 style="font-size: 22px;color: #252525;line-height: 25px;text-align: left" class="vc_custom_heading gray_arrow_after_heading">
-                    <a href="/case-study-huvr/">View Case Study</a>
-                </h4>
-            </div>
-        </div>
-        <div class="col work-card">Right</div>
+<div class="row cpt-lg-6" style="background-color: #ea0000;">
+    <div class="container">
+        <h1 style="color: #ffffff;text-align: left" class="vc_custom_heading">The work we do,</h1>
     </div>
 </div>
+<div class="row">
+    <div class="container">
+        <h1 style="color: #000000;text-align: left" class="vc_custom_heading">and the brands we help.</h1>
+    </div>
+</div>
+
+<app-works-card> </app-works-card>  
