--- a/redhorn/src/app/pages/work/works-card/works-card.component.html
+++ b/redhorn/src/app/pages/work/works-card/works-card.component.html
@@ -1,1 +1,21 @@
-<p>works-card works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col work-card"  *ngFor="let card of WorksCard">
+            <div class="work-card-img">
+                <img class="img-fluid" src="{{card.imagePath}}">
+            </div>
+            <div class="work-card-title">
+                <p>{{card.title}} —</p>
+            </div>
+            <div class="work-card-content">
+                <p>{{card.content}}</p>
+            </div>
+            <div class="work-card-link">
+                <h4 style="font-size: 22px;color: #252525;line-height: 25px;text-align: left" class="vc_custom_heading gray_arrow_after_heading">
+                    <a href="/case-study-huvr/" class="dark">View Case Study</a>
+                </h4>
+            </div>
+        </div>
+        
+    </div>
+</div>
